ui2022/src/app/util/common-components/lightbox-gallery/lightbox-gallery.component.scss
#myImg {
  cursor: pointer;
  width: 100%;
}

/* The Modal (background) */
.lightbox {
  display: none;
  position: fixed;
  z-index: 10;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #000000e8;
}

/* Modal Content */
.content {
  position: relative;
  height: 100vh
}

.slideImage {
  max-height: 100vh;
  height: 100%;
}

/* The Close Button */
.close {
  position: absolute;
  top: 2rem;
  right: 2rem;
  color: var(--background);
  background: var(--background);
  border-radius: 1.5rem;
  width: 3rem;
  height: 3rem;
  mat-icon {
    position: relative;
    top: 0.5rem;
    font-size: 2rem;
    width: 3rem;
    height: 3rem;
  }
}

.dots {
  z-index: 4;
  position: relative;
  bottom: 2rem;
}

.index {
  font-size: 0.75rem;
  color: var(--background);
}

mat-icon {
  color: var(--dark-brown);
}

mat-icon:hover {
  color: var(--green);
}

.imageNav {
  position: absolute;
  bottom: 4rem;
  .selected {
    color: var(--green);
  }
}

.close:hover,
.close:focus {
  color: var(--green);
  cursor: pointer;
}

/* Hide the slides by default */
.mySlides {
  text-align: center;
  height: 100vh;
  display: none;
  opacity: 0;
  transition: 0.5s;
  -webkit-transition: 0.5s;
  -moz-transition: 0.5s;
  -ms-transition: 0.5s;
  -o-transition: 0.5s;

  p {
    position: absolute;
    bottom: 0;
    color: var(--dark-brown);
    padding: 1rem;
    background: var(--background);
    text-shadow: none;
  }
}

/* Next & previous buttons */
.prev,
.next {
  text-decoration: none;
  cursor: pointer;
  position: absolute;
  top: 45%;
  padding: 16px;
  font-size: 2rem;
  color: var(--background);
}

/* Position the "next button" to the right */
.next {
  right: 0;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  color: var(--green);
}

